fixing spacing and style of FAQ (adding wells and more white space)

--- a/neuropower/static/css/style.css
+++ b/neuropower/static/css/style.css
@@ -147,3 +147,9 @@ body {
   float: left !important;
   position: relative !important;
 }
+
+/* FAQ */
+
+.question {
+  margin-top:30px;
+}
